# trending

./: .gitignore  README.md  generate_history.py  main.py  pyproject.toml  test_dashboard.html
.github/workflows/: daily-trending.yml
ai-studio/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
ai-studio/components/: DeepDiveView.tsx  DetailPanel.tsx  RepoList.tsx  Sidebar.tsx  TreemapView.tsx
archives/: hn.html  index.html  rss.xml
archives/2026/01/: 2026-01-24.html  2026-01-24.json  2026-01-25.html  2026-01-25.json  2026-01-26.html  2026-01-26.json  2026-01-27.html  2026-01-27.json  2026-01-28.html  2026-01-28.json  2026-01-29.html  2026-01-29.json  2026-01-30.html  2026-01-30.json  2026-01-30.md  2026-01-30_en.html  2026-01-31.html  2026-01-31.json  2026-01-31.md  2026-01-31_en.html
archives/2026/02/: 2026-02-01.html  2026-02-01.json  (+30 more)
archives/deep-dive/: awesome-claude-skills.html  escrcpy.html  gitbutler.html  heretic.html  likec4.html  litebox.html  minicpm-o.html  shannon.html  skills.html  superpowers.html  trivy.html  waveterm.html
src/: __init__.py  ai_summary.py  analyzer.py  dashboard.py  deep_dive.py  generator.py  history.py  hn_dashboard.py  hn_scraper.py  rss.py  scraper.py
stitch/deep_dive_repository_analysis/: code.html
stitch/synapse_feed_main_dashboard/: code.html
stitch/tech_pulse_treemap_visualization/: code.html
tests/: conftest.py  test_cross_page.py  test_deep_dive.py  test_detail_panel.py  test_hn_content.py  test_hn_navigation.py  test_main_navigation.py  test_search.py  test_treemap.py
